# api/internal/handlers/budgets.go
@@ -1,0 +1,136 @@
+package handlers
+
+import (
+	"net/http"
+	"time"
+
+	"receipt-wrangler/api/internal/commands"
+	"receipt-wrangler/api/internal/constants"
+	"receipt-wrangler/api/internal/permissions"
+	"receipt-wrangler/api/internal/repositories"
+	"receipt-wrangler/api/internal/services"
+	"receipt-wrangler/api/internal/structs"
+	"receipt-wrangler/api/internal/utils"
+
+	"github.com/go-chi/chi/v5"
+)
+
+func GetBudgetData(w http.ResponseWriter, r *http.Request) {
+	groupId := chi.URLParam(r, "groupId")
+
+	handler := structs.Handler{
+		ErrorMessage:     "Error getting budget data",
+		Writer:           w,
+		Request:          r,
+		GroupId:          groupId,
+		GroupPermissions: []string{permissions.GroupBudgetsRead},
+		ResponseType:     constants.ApplicationJson,
+		HandlerFunction: func(w http.ResponseWriter, r *http.Request) (int, error) {
+			token := structs.GetClaims(r)
+			budgetService := services.NewBudgetService(nil)
+
+			data, err := budgetService.GetBudgetData(token.UserId, groupId, time.Now())
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			bytes, err := utils.MarshalResponseData(data)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			w.WriteHeader(http.StatusOK)
+			w.Write(bytes)
+
+			return 0, nil
+		},
+	}
+
+	HandleRequest(handler)
+}
+
+func UpsertBudget(w http.ResponseWriter, r *http.Request) {
+	groupId := chi.URLParam(r, "groupId")
+
+	handler := structs.Handler{
+		ErrorMessage:     "Error saving budget",
+		Writer:           w,
+		Request:          r,
+		GroupId:          groupId,
+		GroupPermissions: []string{permissions.GroupBudgetsUpdate},
+		ResponseType:     constants.ApplicationJson,
+		HandlerFunction: func(w http.ResponseWriter, r *http.Request) (int, error) {
+			command := commands.UpsertCategoryBudgetCommand{}
+			err := command.LoadDataFromRequest(w, r)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			vErr := command.Validate()
+			if len(vErr.Errors) > 0 {
+				structs.WriteValidatorErrorResponse(w, vErr, http.StatusBadRequest)
+				return 0, nil
+			}
+
+			uintGroupId, err := utils.StringToUint(groupId)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			budgetRepository := repositories.NewCategoryBudgetRepository(nil)
+			budget, err := budgetRepository.UpsertBudget(uintGroupId, command.CategoryId, command.Amount)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			bytes, err := utils.MarshalResponseData(budget)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			w.WriteHeader(http.StatusOK)
+			w.Write(bytes)
+
+			return 0, nil
+		},
+	}
+
+	HandleRequest(handler)
+}
+
+func DeleteBudget(w http.ResponseWriter, r *http.Request) {
+	groupId := chi.URLParam(r, "groupId")
+	categoryId := chi.URLParam(r, "categoryId")
+
+	handler := structs.Handler{
+		ErrorMessage:     "Error deleting budget",
+		Writer:           w,
+		Request:          r,
+		GroupId:          groupId,
+		GroupPermissions: []string{permissions.GroupBudgetsDelete},
+		ResponseType:     constants.ApplicationJson,
+		HandlerFunction: func(w http.ResponseWriter, r *http.Request) (int, error) {
+			uintGroupId, err := utils.StringToUint(groupId)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			uintCategoryId, err := utils.StringToUint(categoryId)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			budgetRepository := repositories.NewCategoryBudgetRepository(nil)
+			err = budgetRepository.DeleteBudget(uintGroupId, uintCategoryId)
+			if err != nil {
+				return http.StatusInternalServerError, err
+			}
+
+			w.WriteHeader(http.StatusOK)
+
+			return 0, nil
+		},
+	}
+
+	HandleRequest(handler)
+}
